Added webpack configuration for the HDBT Admin theme.

--- a/hdbt_admin.info.yml
+++ b/hdbt_admin.info.yml
@@ -4,3 +4,7 @@ type: theme
 base theme: gin
 tags: sub-theme
 core_version_requirement: ^8 || ^9
+
+# Define Libraries
+libraries:
+  - hdbt_admin/global-styling
