--- a/modules/hdbt_admin_tools/hdbt_admin_tools.info.yml
+++ b/modules/hdbt_admin_tools/hdbt_admin_tools.info.yml
@@ -3,3 +3,5 @@ description: 'Admin tools for administrators and content producers.'
 package: 'HDBT Admin'
 core_version_requirement: ^8 || ^9
 type: module
+dependencies:
+  - config_translation
