--- a/config/install/hdbt_admin.settings.yml
+++ b/config/install/hdbt_admin.settings.yml
@@ -1,3 +1,7 @@
+dependencies:
+  enforced:
+    module:
+      - hdbt_admin_tools
 features:
   node_user_picture: false
   comment_user_picture: true
@@ -14,4 +18,3 @@ high_contrast_mode: 0
 classic_toolbar: horizontal
 icon_default: 1
 icon_upload: ''
-
