Added default icon and theme colors to site settings form.

--- a/modules/hdbt_admin_tools/config/install/hdbt_admin_tools.site_settings.yml
+++ b/modules/hdbt_admin_tools/config/install/hdbt_admin_tools.site_settings.yml
@@ -1,6 +1,7 @@
 langcode: en
-koro_settings:
+site_settings:
   koro: basic
+  theme_color: engel
 footer_settings:
   footer_color: dark
   footer_top_content:
