--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "babel-minify-webpack-plugin": "^0.3.1",
     "breakpoint-sass": "^2.7.1",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^6.3.0",
+    "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^1.0.0",
     "es6-promise": "^4.1.1",
     "eslint": "5.7.0",
@@ -62,6 +62,7 @@
     "postcss-strip-inline-comments": "^0.1.5",
     "prettier": "^2.1.2",
     "sass-loader": "^8.0.0",
+    "select2": "^4.1.0-rc.0",
     "svg-inline-loader": "^0.8.0",
     "svg-spritemap-webpack-plugin": "^3.7.1",
     "webpack": "^4.43.0",
