--- a/hdbt_admin.info.yml
+++ b/hdbt_admin.info.yml
@@ -9,3 +9,7 @@ core_version_requirement: ^8 || ^9
 libraries:
   - hdbt_admin/global-styling
   - hdbt_admin/global-scripting
+
+# Override libraries.
+libraries-override:
+  select2/select2.min: hdbt_admin/select2.min
