--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "postcss-strip-inline-comments": "^0.1.5",
     "prettier": "^2.1.2",
     "sass-loader": "^8.0.0",
-    "select2": "^4.1.0-rc.0",
+    "select2": "^4.0.13",
     "svg-inline-loader": "^0.8.0",
     "svg-spritemap-webpack-plugin": "^3.7.1",
     "webpack": "^4.43.0",
