UHF-251 Add jquery functionality to admin side that hides obsolete fields in list of links

--- a/hdbt_admin.libraries.yml
+++ b/hdbt_admin.libraries.yml
@@ -14,3 +14,11 @@ global-scripting:
 hero-toggle:
   js:
     dist/js/heroToggle.min.js: {}
+
+list-of-links:
+  js:
+    dist/js/listOfLinks.min.js: {}
+  version: 1.x
+  dependencies:
+    - core/drupal
+    - core/jquery
