--- a/hdbt_admin.info.yml
+++ b/hdbt_admin.info.yml
@@ -9,3 +9,4 @@ core_version_requirement: ^8 || ^9
 libraries:
   - hdbt_admin/global-styling
   - hdbt_admin/global-scripting
+  - hdbt_admin/list-of-links
