--- a/modules/hdbt_admin_editorial/hdbt_admin_editorial.info.yml
+++ b/modules/hdbt_admin_editorial/hdbt_admin_editorial.info.yml
@@ -4,3 +4,5 @@ description: 'Editorial provides editorial enhancements for content editors.'
 package: Custom
 core: 8.x
 core_version_requirement: ^8 || ^9
+dependencies:
+  - ckeditor
