--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
   "scripts": {
     "dev": "webpack --progress --mode development --config  webpack.config.dev.js --watch",
     "build": "webpack -p --progress --mode production --config webpack.config.build.js",
+    "postinstall": "npx husky",
     "lint": "lint-staged",
     "lint:js": "eslint --fix src/"
   },
   "devDependencies": {
     "css-declaration-sorter": "^6.0.2",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.1",
-    "postcss-cli": "^8.2.0",
+    "lint-staged": "^10.5.3",
+    "postcss-cli": "^8.3.1",
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "@babel/core": "^7.10.3",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
-    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-env": "^7.12.11",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-minify-webpack-plugin": "^0.3.1",
     "breakpoint-sass": "^2.7.1",
     "clean-webpack-plugin": "^0.1.19",
@@ -42,35 +42,36 @@
     "hds-design-tokens": "^0.17",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.3.6",
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^0.4.1",
-    "modernizr": "^3.11.2",
+    "modernizr": "^3.11.4",
     "node-sass": "^4.14.1",
     "node-sass-glob-importer": "^5.3.2",
     "normalize.css": "^8.0.1",
-    "postcss": "^8.1.4",
+    "postcss": "^8.2.2",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend": "^1.0.5",
     "postcss-import": "^13.0.0",
     "postcss-import-ext-glob": "^1.1.0",
-    "postcss-loader": "^4.0.4",
-    "postcss-nested": "^5.0.1",
+    "postcss-loader": "^4.1.0",
+    "postcss-nested": "^5.0.3",
     "postcss-nesting": "^7.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-scss": "^3.0.2",
     "postcss-strip-inline-comments": "^0.1.5",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "sass-loader": "^8.0.0",
     "select2": "^4.0.13",
     "svg-inline-loader": "^0.8.0",
-    "svg-spritemap-webpack-plugin": "^3.7.1",
+    "svg-spritemap-webpack-plugin": "^3.8.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-fix-style-only-entries": "^0.4.0",
     "webpack-merge": "^4.1.4",
     "webpack-modernizr-loader": "^4.0.1",
-    "webpack-notifier": "^1.6.0"
+    "webpack-notifier": "^1.12.0"
   },
   "husky": {
     "hooks": {
