--- a/modules/hdbt_admin_tools/hdbt_admin_tools.links.menu.yml
+++ b/modules/hdbt_admin_tools/hdbt_admin_tools.links.menu.yml
@@ -30,6 +30,12 @@ hdbt_admin_tools.site_information:
   route_name: system.site_information_settings
   weight: 0
 
+hdbt_admin_tools.component_library:
+  title: 'HDBT - Component library'
+  parent: hdbt_admin_tools.overview
+  route_name: hdbt_component_library.component_library
+  weight: 1
+
 hdbt_admin_tools.footer_top_menu:
   title: 'Footer top navigation menu links'
   parent: hdbt_admin_tools.menus
