Renamed container paragraph to columns paragraph.

--- a/hdbt_admin.libraries.yml
+++ b/hdbt_admin.libraries.yml
@@ -17,6 +17,13 @@ hero-toggle:
   js:
     dist/js/heroToggle.min.js: {}
 
+columns-toggle:
+  js:
+    dist/js/columnsToggle.min.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+
 list-of-links:
   js:
     dist/js/listOfLinks.min.js: {}
