UHF-80: Style language selector for admin interface

--- a/hdbt_admin.info.yml
+++ b/hdbt_admin.info.yml
@@ -10,6 +10,7 @@ libraries:
   - hdbt_admin/global-styling
   - hdbt_admin/global-scripting
   - hdbt_admin/list-of-links
+  - hdbt_admin/language-switcher
 
 # Override libraries.
 libraries-override:
