UHF-886: UHF-886: Added design field widget and images for each design.

--- a/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
+++ b/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
@@ -9,8 +9,11 @@ modal_window_position:
 
 design_selection:
   version: 1.x
+  css:
+    theme:
+      assets/css/basicLightbox.min.css: {}
   js:
-    assets/js/zooming.min.js: {}
+    assets/js/basicLightbox.min.js: {}
     assets/js/designSelection.js: {}
   dependencies:
     - core/jquery
