UHF-886: Fixed broken select2 icon.

--- a/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
+++ b/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
@@ -13,8 +13,7 @@ design_selection:
     theme:
       assets/css/basicLightbox.min.css: {}
   js:
-    assets/js/basicLightbox.min.js: {}
-    assets/js/designSelection.js: {}
+    assets/js/designSelection.js: { weight: -1 }
   dependencies:
     - core/jquery
     - select2/select2
