--- a/modules/select2_icon/select2_icon.libraries.yml
+++ b/modules/select2_icon/select2_icon.libraries.yml
@@ -4,6 +4,6 @@ select2_icon:
     theme:
       assets/css/select2_icon.css: {}
   js:
-    assets/js/select2_icon.js: {}
+    assets/js/select2_icon.js: { weight: -1 }
   dependencies:
     - select2/select2.min
