UHF-1270: Added image previewer functionality. Converted design selection to use image previewer and added image previewer to paragraph selection.

--- a/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
+++ b/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
@@ -7,13 +7,26 @@ modal_window_position:
     - core/jquery
     - core/jquery.once
 
+image_previewer:
+  version: 1.x
+  js:
+    assets/js/imagePreviewer.js: { weight: -2}
+  dependencies:
+    - core/jquery
+
 design_selection:
   version: 1.x
-  css:
-    theme:
-      assets/css/basicLightbox.min.css: {}
   js:
     assets/js/designSelection.js: { weight: -1 }
   dependencies:
     - core/jquery
     - select2/select2
+    - hdbt_admin_editorial/image_previewer
+
+paragraph_selection:
+  version: 1.x
+  js:
+    assets/js/paragraphSelection.js: {}
+  dependencies:
+    - core/jquery
+    - hdbt_admin_editorial/image_previewer
