UHF-1493: Fixed language switcher block settings.

--- a/config/install/block.block.language_switcher_admin.yml
+++ b/config/install/block.block.language_switcher_admin.yml
@@ -20,5 +20,5 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "block.block.language_switcher_admin/node/*\r\n/admin/content/integrations/tpr-unit/*/edit\r\n/admin/content/integrations/tpr-service/*/edit"
+    pages: "/node/*\r\n/admin/content/integrations/tpr-unit/*/edit\r\n/admin/content/integrations/tpr-service/*/edit"
     negate: true
