UHF-1493: Added a copy of ginEditForm and performed the same operations for gin actions in custom entity page.

--- a/hdbt_admin.libraries.yml
+++ b/hdbt_admin.libraries.yml
@@ -24,6 +24,10 @@ hero-toggle:
   js:
     dist/js/heroToggle.min.js: {}
 
+tpr-edit-form:
+  js:
+    dist/js/tprEditForm.min.js: {}
+
 columns-toggle:
   js:
     dist/js/columnsToggle.min.js: {}
