--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "drupal/hdbt_admin",
-    "type": "drupal-custom-theme",
+    "type": "drupal-theme",
     "description": "Helsinki Drupal Base admin theme",
     "keywords": ["Drupal"],
     "license": "GPL-2.0+",
