--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
   "repository": "github:City-of-Helsinki/drupal-hdbt-admin",
   "scripts": {
     "dev": "webpack --progress --mode development --config  webpack.config.dev.js --watch",
-    "build": "webpack -p --progress --mode production --config webpack.config.build.js",
+    "build": "webpack -p --progress --mode production --config webpack.config.build.js && npm run reorder:scss",
     "postinstall": "husky install",
+    "reorder:scss": "postcss src/scss/ --parser postcss-scss --syntax postcss-scss --use css-declaration-sorter --replace --no-map",
     "lint": "lint-staged",
     "lint:js": "eslint --fix src/"
   },
   "dependencies": {
-    "@babel/core": "^7.12.16",
+    "@babel/core": "^7.14.3",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
-    "@babel/preset-env": "^7.12.16",
-    "@sideway/address": "^4.1.1",
+    "@babel/preset-env": "^7.14.4",
+    "@sideway/address": "^4.1.2",
     "@sideway/formula": "^3.0.0",
     "@sideway/pinpoint": "^2.0.0",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.2.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-minify-webpack-plugin": "^0.3.1",
@@ -27,46 +28,46 @@
     "chokidar": "^3.5.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^6.4.1",
-    "css-declaration-sorter": "^6.0.2",
+    "css-declaration-sorter": "^6.0.3",
     "css-loader": "^1.0.0",
     "es6-promise": "^4.1.1",
     "eslint": "5.7.0",
     "eslint-config-drupal-bundle": "^1.0.2",
     "eslint-import-resolver-webpack": "0.10.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "expose-loader": "^0.7.5",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fsevents": "^2.3.2",
-    "glob": "^7.1.6",
+    "glob": "^7.1.7",
     "hds-core": "^0.17",
     "hds-design-tokens": "^0.17",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^5.0.9",
+    "husky": "^5.2.0",
     "image-webpack-loader": "^7.0.1",
     "joi": "^17.4.0",
     "lint-staged": "^10.5.4",
     "mini-css-extract-plugin": "^0.4.1",
-    "modernizr": "^3.11.4",
+    "modernizr": "^3.11.7",
     "node-sass": "^4.14.1",
     "node-sass-glob-importer": "^5.3.2",
     "normalize.css": "^8.0.1",
-    "postcss": "^8.2.6",
+    "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend": "^1.0.5",
     "postcss-import": "^13.0.0",
-    "postcss-import-ext-glob": "^1.1.0",
-    "postcss-loader": "^4.2.0",
-    "postcss-nested": "^5.0.3",
-    "postcss-nesting": "^7.0.1",
+    "postcss-import-ext-glob": "^2.0.1",
+    "postcss-loader": "^4.3.0",
+    "postcss-nested": "^5.0.5",
+    "postcss-nesting": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
-    "postcss-scss": "^3.0.2",
+    "postcss-scss": "^3.0.5",
     "postcss-strip-inline-comments": "^0.1.5",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.0",
     "sass-loader": "^8.0.0",
     "select2": "^4.0.13",
     "svg-inline-loader": "^0.8.0",
