--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "repository": "github:City-of-Helsinki/drupal-hdbt-admin",
   "scripts": {
-    "dev": "webpack --progress --mode development --config  webpack.config.dev.js --watch",
-    "build": "webpack -p --progress --mode production --config webpack.config.build.js",
+    "dev": "webpack --progress --mode=development --config  webpack.config.dev.js --watch",
+    "build": "webpack --progress --mode=production --config webpack.config.build.js",
     "postinstall": "husky install",
     "lint": "lint-staged",
     "lint:js": "eslint --fix src/"
@@ -16,41 +16,40 @@
     "@babel/core": "^7.14.3",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/preset-env": "^7.14.4",
+    "@nuxt/friendly-errors-webpack-plugin": "^2.5.1",
     "@sideway/address": "^4.1.2",
     "@sideway/formula": "^3.0.0",
     "@sideway/pinpoint": "^2.0.0",
     "autoprefixer": "^10.2.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "babel-minify-webpack-plugin": "^0.3.1",
     "breakpoint-sass": "^2.7.1",
     "chokidar": "^3.5.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^6.4.1",
     "css-declaration-sorter": "^6.0.3",
-    "css-loader": "^1.0.0",
+    "css-loader": "^5.2.6",
     "es6-promise": "^4.1.1",
     "eslint": "5.7.0",
     "eslint-config-drupal-bundle": "^1.0.2",
     "eslint-import-resolver-webpack": "0.10.1",
     "eslint-plugin-import": "^2.23.4",
-    "expose-loader": "^0.7.5",
-    "file-loader": "^2.0.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
+    "expose-loader": "^3.0.0",
     "fsevents": "^2.3.2",
     "glob": "^7.1.7",
     "hds-core": "^0.17",
     "hds-design-tokens": "^0.17",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "husky": "^5.2.0",
-    "image-webpack-loader": "^7.0.1",
     "joi": "^17.4.0",
     "lint-staged": "^10.5.4",
-    "mini-css-extract-plugin": "^0.4.1",
+    "meow": "^10.0.1",
+    "mini-css-extract-plugin": "^1.6.0",
     "modernizr": "^3.11.7",
     "node-sass": "^4.14.1",
     "node-sass-glob-importer": "^5.3.2",
+    "normalize-url": "^6.1.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
@@ -67,14 +66,15 @@
     "postcss-strip-inline-comments": "^0.1.5",
     "pre-commit": "^1.2.2",
     "prettier": "^2.3.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^11.0.1",
     "select2": "^4.0.13",
     "svg-inline-loader": "^0.8.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
+    "terser-webpack-plugin": "^5.1.3",
+    "trim-newlines": "^4.0.2",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2",
     "webpack-fix-style-only-entries": "^0.4.0",
     "webpack-merge": "^4.1.4",
-    "webpack-modernizr-loader": "^4.0.1",
     "webpack-notifier": "^1.13.0"
   },
   "lint-staged": {
