--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "expose-loader": "^3.0.0",
     "fsevents": "^2.3.2",
     "glob": "^7.1.7",
-    "hds-core": "^0.17",
-    "hds-design-tokens": "^0.17",
+    "hds-core": "^1.2.0",
+    "hds-design-tokens": "^1.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^5.2.0",
     "joi": "^17.4.0",
     "lint-staged": "^10.5.4",
     "mini-css-extract-plugin": "^1.6.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "node-sass-glob-importer": "^5.3.2",
     "normalize-url": "^6.1.0",
     "normalize.css": "^8.0.1",
@@ -70,9 +70,9 @@
     "terser-webpack-plugin": "^5.1.3",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
-    "webpack-remove-empty-scripts": "^0.7.1",
     "webpack-merge": "^4.1.4",
-    "webpack-notifier": "^1.13.0"
+    "webpack-notifier": "^1.13.0",
+    "webpack-remove-empty-scripts": "^0.7.1"
   },
   "lint-staged": {
     "src/scss/**/*.scss": [
