--- a/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
+++ b/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
@@ -1,5 +1,5 @@
 modal_window_position:
-  version: VERSION
+  version: 1.x
   js:
     assets/js/modalWindowPosition.js: {}
   dependencies:
@@ -31,10 +31,10 @@ paragraph_selection:
     - core/jquery
     - hdbt_admin_editorial/image_previewer
 
-link_protocol_selection:
-  version: VERSION
+link_plugin_enhancements:
+  version: 1.x
   js:
-    assets/js/linkProtocolSelector.js: {}
+    assets/js/linkPluginEnhancements.js: {}
   dependencies:
     - core/drupal
     - core/jquery
