UHF-1181: Added default value event trigger for dynamic entity reference field widget. Revert when all entities can be referred.

--- a/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
+++ b/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
@@ -23,6 +23,13 @@ color_palette_selection:
     - select2/select2
     - hdbt/color-palette
 
+dynamic_entity_reference:
+  version: 1.x
+  js:
+    assets/js/dynamicEntityReferenceDefaultValue.js: {}
+  dependencies:
+    - core/drupal
+
 design_selection:
   version: 1.x
   js:
