--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "root": true,
     "env": {
         "browser": true,
         "es6": true
@@ -6,6 +7,22 @@
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 2015
+    },
+    "globals": {
+        "Drupal": true,
+        "drupalSettings": true,
+        "drupalTranslations": true,
+        "jQuery": true,
+        "_": true,
+        "Cookies": true,
+        "Backbone": true,
+        "Modernizr": true,
+        "Popper": true,
+        "Shepherd": true,
+        "Sortable": true,
+        "once": true,
+        "CKEDITOR": true,
+        "tabbable": true
     },
     "rules": {
         "indent": [
@@ -17,12 +34,29 @@
             "unix"
         ],
         "quotes": [
-            "error",
+            "warn",
             "single"
         ],
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "consistent-return": ["off"],
+        "no-underscore-dangle": ["off"],
+        "max-nested-callbacks": ["warn", 3],
+        "no-plusplus": ["warn", {
+            "allowForLoopAfterthoughts": true
+        }],
+        "no-param-reassign": ["off"],
+        "no-prototype-builtins": ["off"],
+        "valid-jsdoc": ["warn", {
+            "prefer": {
+                "returns": "return",
+                "property": "prop"
+            },
+            "requireReturn": false
+        }],
+        "no-unused-vars": ["warn"],
+        "operator-linebreak": ["error", "after", { "overrides": { "?": "ignore", ":": "ignore" } }]
     }
 }
