--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.14.3",
+    "@babel/eslint-parser": "^7.16.3",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "^7.14.4",
     "@nuxt/friendly-errors-webpack-plugin": "^2.5.1",
@@ -21,7 +22,6 @@
     "@sideway/formula": "^3.0.0",
     "@sideway/pinpoint": "^2.0.0",
     "autoprefixer": "^10.2.6",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "breakpoint-sass": "^2.7.1",
     "chokidar": "^3.5.1",
@@ -30,8 +30,7 @@
     "css-declaration-sorter": "^6.0.3",
     "css-loader": "^5.2.6",
     "es6-promise": "^4.1.1",
-    "eslint": "5.16.0",
-    "eslint-config-drupal-bundle": "^1.0.2",
+    "eslint": "^7.32.0",
     "eslint-import-resolver-webpack": "0.13.1",
     "eslint-plugin-import": "^2.23.4",
     "expose-loader": "^3.0.0",
@@ -41,12 +40,10 @@
     "hds-design-tokens": "^1.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^5.2.0",
+    "husky": "^5.0.9",
     "joi": "^17.4.0",
     "lint-staged": "^10.5.4",
-    "mini-css-extract-plugin": "^1.6.0",
-    "node-sass": "^6.0.1",
-    "node-sass-glob-importer": "^5.3.2",
+    "mini-css-extract-plugin": "^1.6.2",
     "normalize-url": "^6.1.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.3.0",
@@ -57,17 +54,18 @@
     "postcss-import": "^13.0.0",
     "postcss-import-ext-glob": "^2.0.1",
     "postcss-loader": "^4.3.0",
-    "postcss-nested": "^5.0.5",
+    "postcss-nested": "^5.0.3",
     "postcss-nesting": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
-    "postcss-scss": "^3.0.5",
+    "postcss-scss": "^3.0.2",
     "postcss-strip-inline-comments": "^0.1.5",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.2",
+    "sass": "^1.43.4",
     "sass-loader": "^11.1.1",
     "select2": "^4.0.13",
     "svg-inline-loader": "^0.8.0",
-    "terser-webpack-plugin": "^5.1.3",
+    "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.56.1",
     "webpack-cli": "^4.7.2",
     "webpack-merge": "^4.1.4",
