Updated node modules.

--- a/hdbt_admin.libraries.yml
+++ b/hdbt_admin.libraries.yml
@@ -51,7 +51,7 @@ global-styling:
 
 global-scripting:
   js:
-    dist/js/bundle.min.js: {}
+    dist/js/common.min.js: {}
   version: 1.x
   dependencies:
     - core/drupal
