Updated webpack configuration.

--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "babel-loader": "^8.2.2",
     "breakpoint-sass": "^2.7.1",
     "chokidar": "^3.5.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^6.4.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.0.0",
     "css-declaration-sorter": "^6.0.3",
-    "css-loader": "^5.2.6",
+    "css-loader": "^6.0.0",
     "es6-promise": "^4.1.1",
     "eslint": "^8.0.0",
     "eslint-import-resolver-webpack": "0.13.2",
@@ -38,16 +38,16 @@
     "glob": "^7.1.7",
     "hds-core": "^1.2.0",
     "hds-design-tokens": "^1.2.0",
-    "html-loader": "^0.5.5",
+    "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.0",
     "joi": "^17.4.0",
-    "lint-staged": "^10.5.4",
-    "mini-css-extract-plugin": "^1.6.2",
-    "normalize-url": "^6.1.0",
+    "lint-staged": "^12.0.0",
+    "mini-css-extract-plugin": "1.6.2",
+    "normalize-url": "^7.0.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.3.0",
-    "postcss-cli": "^8.3.1",
+    "postcss-cli": "^9.0.0",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend": "^1.0.5",
@@ -55,7 +55,7 @@
     "postcss-import-ext-glob": "^2.0.1",
     "postcss-loader": "^6.0.0",
     "postcss-nested": "^5.0.3",
-    "postcss-nesting": "^8.0.1",
+    "postcss-nesting": "^10.0.2",
     "postcss-preset-env": "^6.7.0",
     "postcss-scss": "^3.0.2",
     "postcss-strip-inline-comments": "^0.1.5",
