UHF-2059: Altered various field titles and descriptions in node forms.

--- a/modules/hdbt_admin_editorial/hdbt_admin_editorial.info.yml
+++ b/modules/hdbt_admin_editorial/hdbt_admin_editorial.info.yml
@@ -8,3 +8,5 @@ dependencies:
   - ckeditor
   - drupal:editor
   - linkit
+'interface translation project': hdbt_admin_editorial
+'interface translation server pattern': themes/contrib/hdbt_admin/modules/hdbt_admin_editorial/translations/%language.po
