UHF-4235: Removed redundant preprocess for site settings default icon. Override Select2 attached library as attaching the original library will create race condidition if it's included in entity form and dialog (iframe) on the same page.

--- a/hdbt_admin.info.yml
+++ b/hdbt_admin.info.yml
@@ -17,3 +17,4 @@ libraries:
 # Override libraries.
 libraries-override:
   select2/select2.min: hdbt_admin/select2.min
+  select2/select2: select2_icon/select2_icon
