UHF-4451: Move js to library and use local api for version data

--- a/hdbt_admin.libraries.yml
+++ b/hdbt_admin.libraries.yml
@@ -43,6 +43,13 @@ list-of-links:
     - core/drupal
     - core/jquery
 
+debug-item-composer:
+  js:
+    dist/js/debug-item-composer.min.js: {}
+  version: 1.x
+  dependencies:
+    - core/drupalSettings
+
 global-styling:
   version: 1.x
   css:
