UHF-3433: Added styles for the language selector plugin.

--- a/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
+++ b/modules/hdbt_admin_editorial/hdbt_admin_editorial.libraries.yml
@@ -49,3 +49,10 @@ link_plugin_enhancements:
     - core/drupal
     - core/jquery
     - core/jquery.once
+
+language_selector:
+  css:
+    theme:
+      assets/css/language_selector.css: {}
+  dependencies:
+    - core/drupal
