Change correct template to trigger on node creation under groups, remove language switcher from group content creation form

--- a/config/install/block.block.language_switcher_admin.yml
+++ b/config/install/block.block.language_switcher_admin.yml
@@ -20,5 +20,5 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/node/*\r\n/admin/content/integrations/tpr-unit/*/edit\r\n/admin/content/integrations/tpr-service/*/edit"
+    pages: "/node/*\r\n/admin/content/integrations/tpr-unit/*/edit\r\n/admin/content/integrations/tpr-service/*/edit\r\n/group/*/content/create/*"
     negate: true
