--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,6 @@
     "minimum-stability": "dev",
     "require": {
         "drupal/admin_toolbar": "^2.3",
-        "drupal/gin": "3.0.0-alpha37"
+        "drupal/gin": "^3.0"
     }
 }
