UHF-4815: Updated HDBT Admin block and added update hook to automatically fix the region positions for the blocks.

--- a/config/install/block.block.hdbt_admin_primary_local_tasks.yml
+++ b/config/install/block.block.hdbt_admin_primary_local_tasks.yml
@@ -3,15 +3,17 @@ status: true
 dependencies:
   theme:
     - hdbt_admin
-id: hdbt_admin_page_title
+id: hdbt_admin_primary_local_tasks
 theme: hdbt_admin
 region: header
-weight: -7
+weight: -5
 provider: null
-plugin: page_title_block
+plugin: local_tasks_block
 settings:
-  id: page_title_block
-  label: 'Page title'
+  id: local_tasks_block
+  label: 'Primary tabs'
   label_display: '0'
   provider: core
+  primary: true
+  secondary: false
 visibility: {  }
