--- a/config/install/block.block.hdbt_admin_branding.yml
+++ b/config/install/block.block.hdbt_admin_branding.yml
@@ -7,15 +7,15 @@ dependencies:
     - hdbt_admin
 id: hdbt_admin_branding
 theme: hdbt_admin
-region: header
-weight: -4
+region: breadcrumb
+weight: -5
 provider: null
 plugin: system_branding_block
 settings:
   id: system_branding_block
   label: 'Site branding'
-  provider: system
   label_display: '0'
+  provider: system
   use_site_logo: true
   use_site_name: false
   use_site_slogan: false
