--- a/config/install/block.block.hdbt_admin_content.yml
+++ b/config/install/block.block.hdbt_admin_content.yml
@@ -5,15 +5,15 @@ dependencies:
     - system
   theme:
     - hdbt_admin
-id: hdbt_admin_breadcrumbs
+id: hdbt_admin_content
 theme: hdbt_admin
-region: breadcrumb
-weight: -4
+region: content
+weight: 0
 provider: null
-plugin: system_breadcrumb_block
+plugin: system_main_block
 settings:
-  id: system_breadcrumb_block
-  label: Breadcrumbs
+  id: system_main_block
+  label: 'Main page content'
   label_display: '0'
   provider: system
 visibility: {  }
