--- a/hdbt_admin.info.yml
+++ b/hdbt_admin.info.yml
@@ -3,7 +3,7 @@ description: Base theme for Helsinki Drupal instances.
 type: theme
 base theme: gin
 tags: sub-theme
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8.9 || ^9 || ^10
 'interface translation project': hdbt_admin
 'interface translation server pattern': themes/contrib/hdbt_admin/translations/%language.po
 
@@ -18,3 +18,17 @@ libraries:
 libraries-override:
   select2/select2.min: hdbt_admin/select2.min
   select2/select2: select2_icon/select2_icon
+
+# Regions
+regions:
+  header: 'Header'
+  pre_content: 'Pre-content'
+  breadcrumb: Breadcrumb
+  highlighted: Highlighted
+  help: Help
+  content: Content
+  page_top: 'Page top'
+  page_bottom: 'Page bottom'
+  sidebar_first: 'First sidebar'
+regions_hidden:
+  - sidebar_first
