UHF-4815: Fixed bug with TPR entity edit form published state.

--- a/hdbt_admin.libraries.yml
+++ b/hdbt_admin.libraries.yml
@@ -40,6 +40,10 @@ list-of-links:
     - core/drupal
     - core/jquery
 
+tpr-edit-form:
+  js:
+    dist/js/tprEditForm.min.js: {}
+
 debug-item-composer:
   js:
     dist/js/debug-item-composer.min.js: {}
