--- a/modules/hdbt_admin_editorial/hdbt_admin_editorial.info.yml
+++ b/modules/hdbt_admin_editorial/hdbt_admin_editorial.info.yml
@@ -9,5 +9,6 @@ dependencies:
   - drupal:editor
   - drupal:linkit
   - drupal:hdbt_admin_tools
+  - drupal:select2_icon
 'interface translation project': hdbt_admin_editorial
 'interface translation server pattern': themes/contrib/hdbt_admin/modules/hdbt_admin_editorial/translations/%language.po
