UHF-7219: Added missing dependency

--- a/modules/hdbt_admin_editorial/hdbt_admin_editorial.info.yml
+++ b/modules/hdbt_admin_editorial/hdbt_admin_editorial.info.yml
@@ -8,6 +8,7 @@ dependencies:
   - drupal:ckeditor
   - drupal:editor
   - drupal:linkit
+  - drupal:options
   - drupal:hdbt_admin_tools
   - drupal:select2_icon
 'interface translation project': hdbt_admin_editorial
