--- a/modules/hdbt_admin_editorial/hdbt_admin_editorial.info.yml
+++ b/modules/hdbt_admin_editorial/hdbt_admin_editorial.info.yml
@@ -7,7 +7,7 @@ core_version_requirement: ^8 || ^9
 dependencies:
   - drupal:ckeditor
   - drupal:editor
-  - drupal:linkit
+  - linkit:linkit
   - drupal:options
   - hdbt_admin_tools:hdbt_admin_tools
   - select2_icon:select2_icon
