--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ env:
   SIMPLETEST_DB: "mysql://drupal:drupal@db:3306/drupal"
   SIMPLETEST_BASE_URL: "http://127.0.0.1:8080"
   THEME_NAME: hdbt_admin
+  DRUPAL_CORE: 9.4.x
   SYMFONY_DEPRECATIONS_HELPER: disabled
 jobs:
   tests:
@@ -45,3 +46,10 @@ jobs:
         run: |
           cd $DRUPAL_ROOT
           vendor/bin/phpcs public/themes/contrib/$THEME_NAME --extensions=php,theme,module --standard=Drupal
+
+      - name: Run PHPUnit tests
+        run: |
+          cd $DRUPAL_ROOT
+          vendor/bin/drush runserver $SIMPLETEST_BASE_URL > /dev/null 2>&1 &
+          chromedriver --port=4444 > /dev/null 2>&1 &
+          vendor/bin/phpunit -c $DRUPAL_ROOT/phpunit.platform.xml --verbose --group $THEME_NAME
