--- a/modules/hdbt_admin_tools/hdbt_admin_tools.routing.yml
+++ b/modules/hdbt_admin_tools/hdbt_admin_tools.routing.yml
@@ -4,7 +4,7 @@ hdbt_admin_tools.list_all:
     _controller: '\Drupal\hdbt_admin_tools\Controller\ListController::build'
     _title: 'Tools'
   requirements:
-    _permission: 'administer nodes'
+    _permission: 'access administration pages'
 
 hdbt_admin_tools.site_settings_form:
   path: '/admin/tools/site-settings'
