--- a/modules/hdbt_admin_tools/hdbt_admin_tools.routing.yml
+++ b/modules/hdbt_admin_tools/hdbt_admin_tools.routing.yml
@@ -5,6 +5,8 @@ hdbt_admin_tools.list_all:
     _title: 'Tools'
   requirements:
     _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
 
 hdbt_admin_tools.site_settings_form:
   path: '/admin/tools/site-settings'
@@ -20,3 +22,5 @@ hdbt_admin_tools.taxonomy:
   path: '/admin/structure/taxonomy'
   requirements:
     _permission: 'access taxonomy overview'
+  options:
+    _admin_route: TRUE
