--- a/config/install/hdbt_admin.settings.yml
+++ b/config/install/hdbt_admin.settings.yml
@@ -2,15 +2,15 @@ features:
   node_user_picture: false
   comment_user_picture: true
   comment_user_verification: true
-  favicon: 1
+  favicon: true
 favicon:
-  use_default: 1
-enable_darkmode: 0
+  use_default: true
+enable_darkmode: false
 preset_accent_color: light_blue
 accent_color: ''
 preset_focus_color: gin
 focus_color: ''
-high_contrast_mode: 0
+high_contrast_mode: false
 classic_toolbar: horizontal
-icon_default: 1
+icon_default: true
 icon_upload: ''
