--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "GPL-2.0+",
     "minimum-stability": "dev",
     "require": {
+        "drupal/admin_toolbar": "^3.0",
         "drupal/gin": "3.0.0-beta5"
     },
     "conflict": {
