Freeze admin toolbar module to 3.3.0 until the https://www.drupal.org/node/3286466 issue has been resolved in gin toolbar.

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "drupal/gin": "3.0.0-rc2"
     },
     "conflict": {
-        "drupal/helfi_platform_config": "<3.0"
+        "drupal/helfi_platform_config": "<3.0",
+        "drupal/admin_toolbar": ">3.3.0"
     }
 }
