--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "minimum-stability": "dev",
     "require": {
         "drupal/gin": "3.0.0-rc2",
-        "drupal/admin_toolbar": "3.3.0"
+        "drupal/admin_toolbar": "^3.0"
     },
     "conflict": {
         "drupal/helfi_platform_config": "<3.0",
