--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
         "drupal/admin_toolbar": "^3.0"
     },
     "conflict": {
-        "drupal/helfi_platform_config": "<3.0",
-        "drupal/admin_toolbar": ">3.3.0"
+        "drupal/helfi_platform_config": "<3.0"
     }
 }
