--- a/hdbt_admin.info.yml
+++ b/hdbt_admin.info.yml
@@ -14,6 +14,11 @@ libraries:
   - hdbt_admin/list-of-links
   - hdbt_admin/language-switcher
 
+# Override libraries.
+libraries-override:
+  # This is here to make the contrib select2 module work since its asset management doesn't suit our proxy setup.
+  select2/select2.min: hdbt_admin/select2.min
+
 # Regions
 regions:
   header: 'Header'
