UHF-8489: Modified styles for the color palette and removed obsolete styles/translations.

--- a/hdbt_admin.info.yml
+++ b/hdbt_admin.info.yml
@@ -32,3 +32,6 @@ regions:
   sidebar_first: 'First sidebar'
 regions_hidden:
   - sidebar_first
+
+ckeditor5-stylesheets:
+  - dist/css/ckeditor.min.css
