--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "GPL-2.0+",
     "minimum-stability": "dev",
     "require": {
-        "drupal/gin": "3.0.0-rc3",
+        "drupal/gin": "^3.0@rc",
         "drupal/admin_toolbar": "^3.0"
     },
     "conflict": {
