--- a/.github/workflows/npm-audit.yml
+++ b/.github/workflows/npm-audit.yml
@@ -1,6 +1,7 @@
 name: Npm audit
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 12 * * 0'  # Run every fortnight on Sunday at 12
 
@@ -16,9 +17,7 @@ jobs:
         run: |
           node_version=$(cat .nvmrc)
           echo "Using Node.js version $node_version"
-          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash
-          export NVM_DIR="$HOME/.nvm"
-          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+          export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
           nvm install $node_version
           nvm use $node_version
           npm install --silent
@@ -28,14 +27,22 @@ jobs:
         run: |
           set +e
           npm audit --package-lock-only --loglevel=error;
-          
+
           # The npm audit command will exit with a 0 exit code if no vulnerabilities were found.
           if [ $? -eq 0 ]; then echo "CREATE_PR=false" >> $GITHUB_OUTPUT; else echo "CREATE_PR=true" >> $GITHUB_OUTPUT; fi;
           set -e
 
       - name: Run npm audit fix
+        id: npm_audit_fix
         if: steps.npm_audit.outputs.CREATE_PR == 'true'
-        run: npm audit fix --package-lock-only --loglevel=error;
+        run: |
+          set +e
+          npm audit fix --package-lock-only --loglevel=error;
+
+          # The npm audit command will exit with a 0 exit code if no vulnerabilities were found.
+          if [ $? -gt 0 ]; then
+            echo "BC_BREAK=:exclamation: NPM Audit fix couldn't fix all vulnerabilities. Fix them manually by running \`npm audit fix --force\` and test the functionalities thoroughly as there might be breaking changes. :exclamation:" >> $GITHUB_OUTPUT;
+          fi;
 
       - name: Create Pull Request
         if: steps.npm_audit.outputs.CREATE_PR == 'true'
@@ -48,17 +55,20 @@ jobs:
           labels: auto-update
           body: |
             # Npm audit
+
+            ${{ steps.npm_audit_fix.outputs.BC_BREAK }}
+
             ## How to install
-  
+
             * Update the HDBT theme
                * `git fetch --all`
                * `git checkout automation/npm-audit`
                * `git pull origin automation/npm-audit`
             * In theme folder, run `nvm use && npm i && npm run build`
-  
+
             ## How to test
             Run `npm audit`
-  
+
             * [ ] Check that the `npm audit` prints `found 0 vulnerabilities`
             * [ ] Check that the changes for distributed files are sensible
 
