UHF-9216: Added a library and JS for the character counter.

--- a/hdbt_admin.libraries.yml
+++ b/hdbt_admin.libraries.yml
@@ -1,3 +1,10 @@
+character-counter:
+  js:
+    dist/js/characterCounter.min.js: {}
+  version: 1.0.0
+  dependencies:
+    - core/drupal
+
 language-switcher:
   js:
     dist/js/languageSwitcher.min.js: {}
