--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -5,12 +5,13 @@ plugins:
 rules:
   # scss/at-import-no-partial-leading-underscore: null
   string-quotes: single # We use single quotes in SCSS
-  declaration-block-no-redundant-longhand-properties: null # We prefer lonhand properties for clarity in SCSS
-  selector-class-pattern: null # We're not too stict about selector class pattern
-  max-line-length: null # Lets not limit line length at this point
+  declaration-block-no-redundant-longhand-properties: null # We prefer longhand properties for clarity in SCSS
+  selector-class-pattern: null # We're not too strict about selector class pattern
+  max-line-length: null # Let's not limit line length at this point
   declaration-empty-line-before: never # No need for empty line before declaration
   order/properties-alphabetical-order: true # We're following alphabetical order in properties
   custom-property-pattern: "^([a-z][a-z0-9]*)(--?[a-z0-9]+)*$" # kebab-case pattern with allowed bem-like double --
+  max-nesting-depth: 4 # We're not using normal nesting rule of 3, as admin theme is all about overriding styles
 overrides:
   - files:
       - '**/ckeditor.scss'
