UHF-9739: UHF-9739: Added updating news auto toggle javascript library.

--- a/hdbt_admin.libraries.yml
+++ b/hdbt_admin.libraries.yml
@@ -29,6 +29,13 @@ tpr-edit-form:
   js:
     dist/js/tprEditForm.min.js: {}
 
+updating-news-auto-toggle:
+  js:
+    dist/js/updatingNewsAutoToggle.min.js: {}
+  version: 1.0
+  dependencies:
+    - core/once
+
 debug-item-composer:
   js:
     dist/js/debug-item-composer.min.js: {}
