Switch the Gin RC10 downgrade to conflict instead.

--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "license": "GPL-2.0+",
     "minimum-stability": "dev",
     "require": {
-        "drupal/gin": "3.0.0-rc10",
+        "drupal/gin": "^3.0@rc",
         "drupal/admin_toolbar": "^3.0"
     },
     "conflict": {
+        "drupal/gin": ">3.0.0-rc10",
         "drupal/helfi_platform_config": "<4.3"
     }
 }
