--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -4,10 +4,8 @@ plugins:
   - stylelint-order
 rules:
   # scss/at-import-no-partial-leading-underscore: null
-  string-quotes: single # We use single quotes in SCSS
   declaration-block-no-redundant-longhand-properties: null # We prefer longhand properties for clarity in SCSS
-  selector-class-pattern: null # We're not too strict about selector class pattern
-  max-line-length: null # Let's not limit line length at this point
+  selector-class-pattern: "" # We're not too strict about selector class pattern
   declaration-empty-line-before: never # No need for empty line before declaration
   order/properties-alphabetical-order: true # We're following alphabetical order in properties
   custom-property-pattern: "^([a-z][a-z0-9]*)(--?[a-z0-9]+)*$" # kebab-case pattern with allowed bem-like double --
