--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     },
     "conflict": {
         "drupal/gin": ">3.0.0-rc11",
-        "drupal/helfi_platform_config": "<4.3"
+        "drupal/helfi_platform_config": "<4.3",
+        "drupal/helfi_api_base": "<2.7.6"
     }
 }
