--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "husky": "^9.0.0",
     "joi": "^17.4.0",
     "lint-staged": "^15.0.0",
-    "mini-css-extract-plugin": "1.6.2",
+    "mini-css-extract-plugin": "^2.0.0",
     "normalize-url": "^8.0.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.0",
@@ -60,10 +60,9 @@
     "sass-loader": "^14.0.0",
     "select2": "^4.0.13",
     "svg-inline-loader": "^0.8.0",
-    "terser-webpack-plugin": "^5.2.5",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.0.0",
-    "webpack-merge": "^6.0.0",
+    "webpack-merge": "^5.0.0",
     "webpack-notifier": "^1.14.0",
     "webpack-remove-empty-scripts": "^1.0.0"
   },
