--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "patches": {
             "drupal/gin": {
                 "[#UHF-10892] Gin sidebar nextsibling issue. (https://www.drupal.org/i/3460390)": "https://raw.githubusercontent.com/City-of-Helsinki/drupal-hdbt-admin/d3e6cb08315b8df38696489d2c8f406a67f224b8/patches/gin-3460390-sidebar-nextsibling-innerhtml-rc11.patch",
-                "[#UHF-10293] Paragraph overflow issue": "https://git.drupalcode.org/project/gin/-/commit/73d2a65675aedc92bfb8cd83889d75fc92e33a4d.patch"
+                "[#UHF-10239] Paragraph overflow issue. (https://www.drupal.org/i/3348101)": "https://raw.githubusercontent.com/City-of-Helsinki/drupal-hdbt-admin/d3e6cb08315b8df38696489d2c8f406a67f224b8/patches/gin-3348101-paragraphs-stick-out-from-edge-rc14.patch"
             }
         }
     }
