UHF-10910: Use customized drop button paragraph selection list position calculator.

--- a/hdbt_admin.info.yml
+++ b/hdbt_admin.info.yml
@@ -18,6 +18,8 @@ libraries:
 libraries-override:
   # This is here to make the contrib select2 module work since its asset management doesn't suit our proxy setup.
   select2/select2.min: hdbt_admin/select2.min
+  # We need to customize the drop button JS for our needs.
+  gin/dropbutton: hdbt_admin/drop-button
 
 # Regions
 regions:
