--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "drupal/admin_toolbar": "^3.0"
     },
     "conflict": {
+        "drupal/gin": "<4.0",
         "drupal/helfi_platform_config": "<4.3",
         "drupal/helfi_api_base": "<2.7.6"
     }
