--- a/hdbt_admin.libraries.yml
+++ b/hdbt_admin.libraries.yml
@@ -31,6 +31,13 @@ list-of-links:
     - core/drupal
     - core/jquery
 
+paragraphs-counter:
+  js:
+    dist/js/paragraphsCounter.min.js: {}
+  version: 1.0.0
+  dependencies:
+    - core/drupal
+
 tpr-edit-form:
   js:
     dist/js/tprEditForm.min.js: {}
