UHF-11533: Added a template for the media entity translation overview page and "language-reminder" library + js, which will inform user to continue by selecting a desired language from the overview translations list.

--- a/hdbt_admin.libraries.yml
+++ b/hdbt_admin.libraries.yml
@@ -49,6 +49,13 @@ updating-news-auto-toggle:
   dependencies:
     - core/once
 
+language-reminder:
+  js:
+    dist/js/languageReminder.min.js: {}
+  version: 1.0.0
+  dependencies:
+    - core/drupal
+
 global-styling:
   version: 1.x
   css:
