--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "minimum-stability": "dev",
     "require": {
         "drupal/admin_toolbar": "^3.0",
-        "drupal/gin": "^4.0 || ^5.0",
-        "drupal/helfi_platform_config": "^4.0 || ^5.0"
+        "drupal/gin": "^4.0 || ^5.0"
     },
     "conflict": {
         "drupal/helfi_platform_config": "<4.16.68",
